first version of getExprType implemented and ReturnTypeChecker tests passing (String with issues)